# stonpy

./: .example.py.swp  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  all.py  completion.py  essai.py  example.py  insulin_exported.sbgn  pyproject.toml  query1.sbgn  query1_no_complete.sbgn  query2.sbgn  query2_no_merge_1.sbgn  query2_no_merge_2.sbgn  query2_no_merge_3.sbgn  requirements.txt  setup.py  ston.py
docs/: Makefile  completion_rules.html  py-modindex.html  requirements.txt  stonpy.ston.html  stonpy.utils.html  stonpy_model.html  stonpy_model_PD.html
docs-generator/: .index.rst.swp  .~lock.relationships.csv#  Makefile  conf.py  stonpy.sbgn.rst  stonpy_model.html
docs/source/: cli.rst  conf.py  (+11 more)
documentation/: Makefile
example/: example.py  insulin_exported.sbgn  query1.sbgn  query2.sbgn  query2_no_merge_1.sbgn  query2_no_merge_2.sbgn  query2_no_merge_3.sbgn
notebooks/: insulin.sbgn  tutorial.ipynb
ston/: __init__.py  completer.py  converter.py  converter.py.save  model.py  ston.py  ston_enum.py  utils.py
ston.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stonpy/: __about__.py  __init__.py  cli.py  completer.py  completion.py  completor.py  conversion.py  converter.py  core.py  model.py  sbgn.py  ston.py  ston.py.save  utils.py
stonpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: completion.py  create_db.py  credentials.py  get_maps_from_db.py  my_query_result_1.sbgn  my_query_result_2.sbgn  my_query_result_3.sbgn  my_query_result_4.sbgn  my_query_result_5.sbgn  quickstart.py
(+78 files in other folders)
