[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "stonpy"
version = "0.2.1"
authors = [{name="Adrien Rougny", email="adrienrougny@gmail.com"}]
description = "SBGN to Neo4j database"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dynamic = ["entry-points", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/adrienrougny/stonpy"
"Bug Tracker" = "https://github.com/adrienrougny/stonpy/issues"
